# TSAFL

./: .gitignore  Dockerfile  README.md
test/: cleanDIR.sh  run.sh
test/UAF/: build.sh  run.sh  uaf.c
test/doubleFree/: build.sh  df.c
test/doubleFree2/: build.sh  df.c
test/issue205/: build.sh
test/lock/: build.sh  lock.c
test/nobug/: build.sh  nobug  nobug.c  order.test  test-instr
test/null_concurrency_race/: build.sh
test/speed/: build.sh  speed  speed.cc
test/test/: build.sh  test.c
test/transfer/: build.sh  transfer.c
test/whiletest/: build.sh  cleanDIR.sh  lock.c  testgendistance.sh
test/work/: build.sh
tool/: build_tsafl.sh  config_env.sh  distance.sh  init_env.sh  install_SVF.sh  install_llvm.sh  install_staticAnalysis.sh  ninja_install_static_analysis.sh
tool/SVF/: build.sh
tool/TSAFL/: CMakeLists.txt  CUR-clang-fast  CUR-clang-fast++  README  a.out  afl-analyze.c  afl-as.c  afl-as.h  afl-cmin  afl-fuzz.c  afl-gcc.c  afl-gotcpu.c  afl-plot  afl-showmap.c  afl-tmin.c  afl-whatsup  alloc-inl.h  compile_commands.json  config.h  debug.h  hash.h  init_tsafl.bash  readxml.h  test-instr.c  test_shm  types.h
tool/TSAFL/demo/: demp.c
tool/TSAFL/llvm_mode/: CUR-clang-fast.c  CUR-llvm-pass.so.cc  Currency-instr.cpp  Currency-instr.h  Makefile  afl-llvm-rt.o.c  build.sh  clang-format.sh  compile_commands.json  config.txt  llvm_pass.co.cc  sched.h  test  test-instr  test.c  test.sh  test_sched.c  test_shm_scheduel.c
tool/TSAFL/testcases/test_programs/: test.cc
tool/TSAFL/tsafl/: CMakeLists.txt  TSAFL-fuzz.c  compile_commands.json  helper.cc  helper.h  mem.md  note.md  readxml.c
tool/TSAFL/tsafl-test/: CMakeLists.txt  hashmap.c  set.c  set.h
tool/TSAFL/tsafl-test/nottest/: CMakeLists.txt  config.h  distance.xml  dom_write.xml  finalXml.xml  groupKeys.xml  read.c  sensitive.xml  types.h
tool/TSAFL/tsafl-test/nottest/flexarray/: CMakeLists.txt  testFlexArray.c
tool/TSAFL/tsafl-test/nottest/gdb_question/: CMakeLists.txt  TSAFL-fuzz.c  hashmap.c  hashmap.h
tool/TSAFL/tsafl-test/nottest/helper/: CMakeLists.txt  helper.cc  helper.h  main.c
tool/TSAFL/tsafl-test/nottest/test_shm/: test.cc
tool/TSAFL/tsafl-test/nottest/testhash/: CMakeLists.txt  hashmap.c  testHash.c
tool/analysis/: cleanDIR-01.sh  cleanDIR.sh  pbz2-01.bc  static_analysis.sh  test.bc
tool/analysis/analysis_result/pbzip2/: config.txt  distance.xml  dom_write.xml  finalXml.xml  groupKeys.xml  sensitive.xml
tool/analysis/run_target_example_sh/: run_pbzip2.sh
tool/staticAnalysis/: DumpMemoryInfo.py  DumpMempair.py  ExtractLine.py  ExtractLineStdout.py  analysis.py  analysis_other.py  call_graph.py  check_testing_bugs.py  clean_shm.py  config.py  gendistance.py  gendistance_v2.py  generateGroupKey.py  get_address.py  get_address_old.py  get_aliased_info.py  get_aliased_pair.py  get_info_function.py  get_passInfo_function.py  merge-mempairs.py  out_config.py  out_location.py  out_sensitive_action.py  parse_html.py  prune.py  remove_bitfield.py  staticAnalysis.sh  updateMemGroupSo.py  updateMempairSo.py
tool/staticAnalysis/LLVM-PASS/: .ninja_deps  .ninja_log  CMakeLists.txt  README.md  build.ninja  clean.sh  clean_dir.sh
tool/staticAnalysis/LLVM-PASS/DryRunPass/: DryRunPass.cpp  clean.sh  instruFunction.cpp
tool/staticAnalysis/LLVM-PASS/Generate_CFG_CG/: CMakeLists.txt  Generate_CFG_CG.cpp  config.h  debug.h
tool/staticAnalysis/LLVM-PASS/GroupKey/: CMakeLists.txt  GroupKey.cpp
tool/staticAnalysis/LLVM-PASS/SensitiveOperationsPass/: SensitiveOperationsPass.cpp
tool/staticAnalysis/script/: anaylysis.sh  clean_dir.sh  pbz2.bc
(+3 files in other folders)
